one.
----------------------------------------------------------------------
Mon Jul 30 20:35:42 2001                        Michael Jennings (mej)

Now we're cooking....
----------------------------------------------------------------------
Tue Jul 31 15:24:50 2001                        Michael Jennings (mej)

If zaxxon would behave itself, we'd be doing a lot better.
----------------------------------------------------------------------
Tue Jul 31 20:30:08 2001                        Michael Jennings (mej)

Looks like builds are working now, and I've converted the parallel
stuff.  We'll see how that goes tomorrow.
----------------------------------------------------------------------
Thu Aug  2 12:47:16 2001                        Michael Jennings (mej)

Now working a few small kinks out of the parallel build.
----------------------------------------------------------------------
Thu Aug  2 20:09:57 2001                        Michael Jennings (mej)

Not only are parallel builds now working, but it can once again
rebuild our entire 7.1.1 distro.  Woo-ha!
----------------------------------------------------------------------
Thu Aug  9 21:03:34 2001                        Michael Jennings (mej)

revtool rewrite along with the new revision control module.
----------------------------------------------------------------------
Thu Aug  9 23:02:59 2001                        Michael Jennings (mej)

Haha!  "avbuild" works again! :)
----------------------------------------------------------------------
Mon Aug 13 17:02:57 2001                        Michael Jennings (mej)

Packages can now have their own product files which are picked up by
the build.
----------------------------------------------------------------------
Mon Aug 13 17:25:35 2001                        Michael Jennings (mej)

Finalized the 0.8 version by making sure pkgtool groks "avbuild."
----------------------------------------------------------------------